# $Id$

2008-07-17	Konstantin V. Arkhipov

	* main/DAOs/GenericDAO.class.php: sanity checks added to dropById()
	and dropByIds().

2008-07-15	Konstantin V. Arkhipov

	* main/DAOs/Workers/CacheDaoWorker.class.php: new scalable voodoo-like
	dao worker.

	* core/Cache/: increment/decrement implemented in all CachePeer's.

2008-07-14	Konstantin V. Arkhipov

	* main/DAOs/Workers/CommonDaoWorker.class.php: trivial getListByIds()
	optimization - now fetches only unique objects.

2008-07-13	Konstantin V. Arkhipov

	* main/Base/, main/DAOs/: experimental encapsulant's prefetching
	implemented.

2008-07-09	Ivan Y. Khvostishkov

	* main/Net/Ip/IpAddress.class.php: fixed construction checking for
	ip2long() result. Added toSignedInt() - like ip2long(), but suitable
	for both 32 and 64 bit archs.  Thanks to Evgeny V. Kokovikhin
	<dovg@dovg.ru>.

2008-06-19	Ivan Y. Khvostishkov

	* main/UnifiedContainer/UnifiedContainer.class.php: mergeList() should
	not override clones, so save() can store new list.

	* core/Form/Filters/Stringizer.class.php: cool filter to convert
	objects to strings before applying other filters.

2008-06-18	Ivan Y. Khvostishkov

	* main/Flow/EmptyView.class.php: fake view which renders as empty
	string.

	* main/Flow/MultiPrefixPhpViewResolver.class.php: added useful ability
	do disable certain views (treated as EmptyView).

2008-06-11	Denis M. Gabaidulin

	* main/Flow/BaseEditor.class.php: object identifier parameter
	name customization implemented.

2008-06-11	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveAlias.class.php: closing need for
	aliases in Form.

2008-06-19	Ivan Y. Khvostishkov

	* main/DAOs/Workers/: getListByIds() did not work without objects in
	identity map, fixed.

2008-06-03	Konstantin V. Arkhipov

	* core/Cache/Memcached.class.php: multi-get response deserialized
	all at once now; fixed cache corruption bug in case of custom __wakeup
	implementation.

2008-05-30	Denis M. Gabaidulin
