@@ -2,6 +2,9 @@
 
 2008-07-17	Konstantin V. Arkhipov
 
+	* meta/: dropped uncacheLists() generation for referencing classes,
+	it's useless with forced encapsulant's fetching.
+
 	* main/DAOs/GenericDAO.class.php: sanity checks added to dropById()
 	and dropByIds().
 
